@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.015.
 use strict;
 use warnings;
 
@@ -17,7 +17,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Ryu::Async",
   "PREREQ_PM" => {
-    "Future" => "0.37",
+    "Future" => "0.45",
     "IO::Async" => "0.71",
     "IO::Async::Handle" => 0,
     "IO::Async::Listener" => 0,
@@ -32,7 +32,7 @@ my %WriteMakefileArgs = (
     "IO::Async::Timer::Periodic" => 0,
     "IO::Socket::IP" => "0.37",
     "Log::Any" => "1.050",
-    "Ryu" => "1.008",
+    "Ryu" => "2.001",
     "Ryu::Sink" => 0,
     "Ryu::Source" => 0,
     "Scalar::Util" => 0,
@@ -63,7 +63,7 @@ my %WriteMakefileArgs = (
     "Variable::Disposition" => "0.004",
     "indirect" => 0
   },
-  "VERSION" => "0.016",
+  "VERSION" => "0.017",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -73,7 +73,7 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
-  "Future" => "0.37",
+  "Future" => "0.45",
   "IO::Async" => "0.71",
   "IO::Async::Handle" => 0,
   "IO::Async::Listener" => 0,
@@ -91,7 +91,7 @@ my %FallbackPrereqs = (
   "IO::Socket::IP" => "0.37",
   "IPC::Open3" => 0,
   "Log::Any" => "1.050",
-  "Ryu" => "1.008",
+  "Ryu" => "2.001",
   "Ryu::Sink" => 0,
   "Ryu::Source" => 0,
   "Scalar::Util" => 0,
